force-app/main/default/objects/BLN_ProcessDeactivation__c/BLN_ProcessDeactivation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Process Deactivation</label>
</CustomObject>