force-app/main/default/objects/BLN_ProcessDeactivation__c/fields/BLN_DisableApexTriggers__c.field-meta.xml
<CustomField>
    <fullName>BLN_DisableApexTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Apex Triggers</label>
    <type>Checkbox</type>
</CustomField>