force-app/main/default/objects/BLN_ProcessDeactivation__c/fields/BLN_DisableLightningFlows__c.field-meta.xml
<CustomField>
    <fullName>BLN_DisableLightningFlows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Lightning Flows</label>
    <type>Checkbox</type>
</CustomField>