force-app/main/default/objects/BLN_ProcessDeactivation__c/fields/BLN_DisableValidationRules__c.field-meta.xml
<CustomField>
    <fullName>BLN_DisableValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Validation Rules</label>
    <type>Checkbox</type>
</CustomField>